# riscsim

./: CMakeLists.txt  inst_decode.c  inst_decode.h  load_elf.c  load_elf.h  main.c  main.cpp  rv32i_op.c  rv32i_op.h  test2.c
test/: a.out  b.out  test1.c  test1.s  test2.c  test2.s
